Modernize for PastureStack compatibility